# CoasterBuilder

./: .gitignore  .gitmodules  CMakeLists.txt  README.org  flake.nix
assets/debug/: gyroscope.cbdat  gyroscope.cbmodel  texture_test.cbdat  triangle.cbdat
src/: app.cpp  app.h  main.cpp  pch.h  renderer.cpp  renderer.h  settings.cpp  settings.h  window.cpp  window.h
src/coaster/: bspline.cpp  bspline.h  section.cpp  section.h  stationSection.cpp  stationSection.h  track.cpp  track.h
src/coaster/ui/: trackEditor.cpp  trackEditor.h
src/events/: events.h
src/graphics/: buffer.cpp  bufferLayout.cpp  bufferLayout.h  camera.cpp  camera.h  renderer.cpp  renderer.h  vertexArray.h
src/graphics/2d/: frame.h  ui_manager.cpp  ui_manager.h
src/graphics/3d/: mesh.h  model.cpp  model.h  modelInstance.h  modelLoader.cpp  modelLoader.h
src/graphics/3d/shaders/: atmosphere.frag  atmosphereShader.h  screen.frag  screen.vert  screenShader.h  simple.frag  simple.vert  simpleShader.h  track.frag  track.vert  trackShader.h
src/graphics/3d/shaders/compute/: multiScat.comp  multiScatLUT.h  skyView.comp  skyViewLUT.h  transmittance.comp  transmittanceLUT.h
src/graphics/buffers/: buffer.h  bufferLayout.h  vertexArray.h
src/graphics/graphicsAPI/buffers/: buffer.cpp  buffer.h  vertexArray.cpp  vertexArray.h
src/graphics/graphicsAPI/shaders/: material.h  shaderProgram.cpp  shaderProgram.h  texture.cpp  texture.h
src/graphics/model/: mesh.cpp  mesh.h  model.cpp  model.h  modelInstance.cpp  modelInstance.h  modelLoader.cpp  texture.cpp  texture.h
src/graphics/shaders/: shaderProgram.cpp  shaderProgram.h  simple.frag  simple.vert  simpleShader.h
src/gui/: frame.h  window.cpp  window.h
src/input/: events.h  input.cpp  input.h
src/renderer/: buffer.cpp  buffer.h  bufferLayout.cpp  bufferLayout.h  camera.cpp  camera.h  vertexArray.cpp  vertexArray.h
src/renderer/shaders/: shaderProgram.cpp  shaderProgram.h  simple.vert  simpleShader.h
src/scene/: camera.cpp  camera.h  entity.h  modelInstance.h  modelManager.cpp  modelManager.h  scene.cpp  scene.h
src/scene/coaster_test/: coaster_scene.cpp  coaster_scene.h  coaster_test.cpp  coaster_test.h
src/scene/graphics_test/gyroscope_scene/: gyroscope.cpp  gyroscope.h  gyroscope_scene.cpp  gyroscope_scene.h
src/scene/graphics_test/texture_scene/: texture_plane.cpp  texture_plane.h  texture_scene.cpp  texture_scene.h
src/utils/: logger.cpp  logger.h  paths.cpp  paths.h
tools/cbdatConverter/: convertor.py
tools/cbdatConverter/assets/test/: test.cbdat
